Interpret conclusion and recommendations.

--- a/notebooks/1.4-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.4-hdr-coderefactor-notebook.ipynb
@@ -3837,9 +3837,7 @@
       "id": "ff0c2bce",
       "metadata": {},
       "source": [
-        "The confusion matrix was generated using the true labels and predicted labels to evaluate the classification model’s performance. Labels indicating true negatives, false positives, false negatives, and true positives were assigned to each cell for clear annotation. A heatmap was created to visually represent the matrix, with counts and labels displayed inside the cells. Axis labels and a title were added to enhance understanding of the plot.\n",
-        "\n",
-        "The results show that 421 instances (approximately 51.3%) were correctly identified as no churn, while 242 instances (about 29.5%) were correctly predicted as churn. However, 302 no churn cases (around 36.8%) were incorrectly classified as churn, and 21 churn cases (approximately 2.6%) were missed by the model. "
+        "The confusion matrix was generated using the true labels and predicted labels to evaluate the classification model’s performance. Labels indicating true negatives, false positives, false negatives, and true positives were assigned to each cell for clear annotation. A heatmap was created to visually represent the matrix, with counts and labels displayed inside the cells. Axis labels and a title were added to enhance understanding of the plot. The results show that 421 instances (approximately 51.3%) were correctly identified as no churn, while 242 instances (about 29.5%) were correctly predicted as churn. However, 302 no churn cases (around 36.8%) were incorrectly classified as churn, and 21 churn cases (approximately 2.6%) were missed by the model. "
       ]
     },
     {
@@ -4048,9 +4046,8 @@
       "metadata": {},
       "source": [
         "### 6.3 Model Limitations\n",
-        "- Model depends on data quality and feature relevance.\n",
-        "- Changes in customer behavior or services may reduce model accuracy over time.\n",
-        "- Periodic retraining and monitoring are recommended."
+        "\n",
+        "The model successfully maximizes recall to identify as many churners as possible. However, this focus on recall often comes with trade-offs, such as increased false positives, negatively impacting other performance metrics like precision and overall accuracy. The substantial gap between the predicted churn rate of 55.17% and the actual churn rate of 26.69% highlights a limitation of the machine learning model. Consequently, while the model is effective at capturing potential churners, it may overestimate churn rates and reduce reliability in practical applications."
       ]
     },
     {
@@ -4059,14 +4056,36 @@
       "source": [
         "## Section 7. Conclusion and Recommendations\n",
         "### 7.1 Conclusion\n",
-        "- Developed model predicts churn with good recall and ROC-AUC.\n",
-        "- Identified key factors influencing churn with interpretable methods.\n",
-        "- Threshold tuning improved recall, important for business objectives.\n",
+        "- Contract has the strongest positive contribution to churn prediction — customers with certain contract types are more likely to churn.\n",
+        "- InternetService_Fiber optic and PaperlessBilling also positively contribute to churn risk.\n",
+        "- Tenure has a negative contribution — shorter tenure customers are more likely to churn.\n",
+        "- Some service protections like DeviceProtection and OnlineSecurity have minor negative contributions, suggesting their absence may slightly increase churn risk.\n",
+        "- The machine learning model predicted a churn rate of 55.17% on the test set, significantly higher than the actual historical churn rate of 26.69%, revealing a 28.48% gap between predicted and true churn rates.\n",
         "\n",
-        "### 7.2 Recommendations\n",
-        "- Regularly update and monitor model performance.\n",
-        "- Use insights to improve customer retention strategies.\n",
-        "- Consider deploying model with monitoring for data drift."
+        "### 7.2 Business Recommendations\n",
+        "To reduce the churn, the company can consider the following business strategies:\n",
+        "- Promote Longer-Term Contracts  \n",
+        "    + The “Contract” feature has the strongest positive impact on churn, indicating that customers with shorter or month-to-month contracts are more likely to leave. Encouraging customers to sign longer-term contracts, such as annual or multi-year agreements, through incentives like discounts or bundled services can improve retention. Educating customers on the benefits of longer contracts, including stability and cost savings, may also increase their commitment.\n",
+        "- Improve Fiber Optic Internet Service Experience  \n",
+        "    + Customers using fiber optic internet service show a higher likelihood of churn. This suggests potential issues such as service reliability, pricing, or customer support. The company should investigate these areas and consider enhancing the quality of fiber optic service, providing better technical support, or offering more competitive pricing and promotions tailored to these customers to reduce dissatisfaction.\n",
+        "- Evaluate and Enhance Paperless Billing  \n",
+        "    + Paperless billing is associated with increased churn risk in this analysis. The company should assess whether the digital billing process is clear, user-friendly, and trustworthy. Offering multiple billing options and improving communication around billing can help customers feel more confident managing their accounts, thereby reducing churn.\n",
+        "- Focus on Engaging Newer Customers  \n",
+        "    + Shorter tenure is linked to higher churn risk, so the company should prioritize engagement with new customers. Implementing onboarding programs, regular check-ins, and proactive support during the early months can build loyalty. Early identification of dissatisfaction and timely intervention will help retain customers during this vulnerable period.\n",
+        "- Promote Device Protection and Online Security Services  \n",
+        "    + Although their impact is smaller, the absence of device protection and online security services slightly increases churn risk. The company should promote these add-on services more effectively by highlighting their value in protecting customer devices and data. Bundling these services with popular plans may increase adoption and improve retention.\n",
+        "- Develop Personalized Retention Strategies  \n",
+        "    + Using the insights from feature importance, the company can tailor retention efforts based on individual customer profiles. For example, customers with short-term contracts who use fiber optic internet and paperless billing could receive targeted offers or incentives, making retention efforts more efficient and effective.\n",
+        "\n",
+        "### 7.3 Model Recommendations\n",
+        "To improve machine learning models for churn prediction, the company can consider the following strategies:\n",
+        "\n",
+        "- Balance Precision and Recall:\n",
+        "    + Instead of focusing solely on maximizing recall, the company can tune the model to achieve a better balance between precision and recall. This can be done by adjusting the classification threshold or using evaluation metrics like the F1-score that consider both precision and recall.\n",
+        "- Regular Model Retraining:\n",
+        "    + Customer behavior and market conditions change over time. Regularly retraining the model with new data ensures that it adapts to recent trends and maintains accuracy.\n",
+        "- Calibration of Predicted Probabilities:\n",
+        "    + Apply probability calibration techniques (e.g., Platt scaling, isotonic regression) to ensure that predicted probabilities reflect true likelihoods, reducing overestimation of churn rates."
       ]
     },
     {
