--- a/notebooks/1.4-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.4-hdr-coderefactor-notebook.ipynb
@@ -4055,14 +4055,29 @@
       "metadata": {},
       "source": [
         "## Section 7. Conclusion and Recommendations\n",
-        "### 7.1 Conclusion\n",
+        "\n",
+        "### 7.1 Summary\n",
+        "\n",
+        "The business context and objectives for the telecom customer churn prediction project. The challenge of customer churn, which impacts revenue and growth, is addressed by developing predictive models to identify at-risk customers. Key factors influencing churn are examined, and actionable insights are aimed to be provided for improving retention. A structured analytical approach is planned, including model evaluation based on recall, with success criteria established to ensure high performance and interpretability.\n",
+        "\n",
+        "The dataset is explored to understand its structure and quality. Data completeness is confirmed with no missing values found, while duplicated rows are noted but retained after careful consideration. Data types are adjusted for effective analysis, converting object columns to categorical types. Exploratory data analysis reveals important patterns in customer demographics, service usage, and churn distribution. Relationships among features are examined using visualizations and correlation analyses to inform feature selection and preprocessing strategies.\n",
+        "\n",
+        "The data preparation steps undertaken to ready the dataset for modeling. A new feature representing total charges is engineered, and the target variable is encoded into a binary format. The dataset is split into training and testing sets using stratified sampling to preserve class distribution. Feature types are identified, and preprocessing pipelines are constructed to apply appropriate transformations, including scaling, encoding, and mapping of categorical and binary variables. This setup ensures consistent and efficient data handling during model training.\n",
+        "\n",
+        "Multiple classification models are initialized and evaluated using cross-validation with recall as the scoring metric. Various scalers are tested to identify the most effective preprocessing approach. An ensemble stacking classifier is included among the models to leverage combined strengths. Hyperparameter tuning is performed with a focus on balancing class distributions using advanced resampling techniques and optimizing AdaBoost parameters. The best-performing tuned model is selected based on recall performance.\n",
+        "\n",
+        "The evaluation of the best model on test data. Predictions are generated, and recall is calculated to assess model effectiveness, achieving high recall scores. Learning curves demonstrate stable performance without overfitting. Threshold tuning using precision-recall curves is conducted but deemed unsuitable due to potential overfitting concerns. Model interpretability is enhanced using LIME explanations, highlighting key features influencing predictions. Confusion matrix visualization provides insight into classification errors, and churn rate comparisons reveal discrepancies between predicted and actual churn rates.\n",
+        "\n",
+        "The deployment process, including saving the final model using joblib for future use. Instructions for loading the saved model and preparing new customer data for prediction are provided, with example scenarios illustrating model application. Limitations of the model are acknowledged, particularly the tendency to overestimate churn due to prioritizing recall. Recommendations for business actions and model improvements are outlined to guide practical implementation and ongoing refinement.\n",
+        "\n",
+        "### 7.2 Conclusion\n",
         "- Contract has the strongest positive contribution to churn prediction — customers with certain contract types are more likely to churn.\n",
         "- InternetService_Fiber optic and PaperlessBilling also positively contribute to churn risk.\n",
         "- Tenure has a negative contribution — shorter tenure customers are more likely to churn.\n",
         "- Some service protections like DeviceProtection and OnlineSecurity have minor negative contributions, suggesting their absence may slightly increase churn risk.\n",
         "- The machine learning model predicted a churn rate of 55.17% on the test set, significantly higher than the actual historical churn rate of 26.69%, revealing a 28.48% gap between predicted and true churn rates.\n",
         "\n",
-        "### 7.2 Business Recommendations\n",
+        "### 7.3 Business Recommendations\n",
         "To reduce the churn, the company can consider the following business strategies:\n",
         "- Promote Longer-Term Contracts  \n",
         "    + The “Contract” feature has the strongest positive impact on churn, indicating that customers with shorter or month-to-month contracts are more likely to leave. Encouraging customers to sign longer-term contracts, such as annual or multi-year agreements, through incentives like discounts or bundled services can improve retention. Educating customers on the benefits of longer contracts, including stability and cost savings, may also increase their commitment.\n",
@@ -4077,7 +4092,7 @@
         "- Develop Personalized Retention Strategies  \n",
         "    + Using the insights from feature importance, the company can tailor retention efforts based on individual customer profiles. For example, customers with short-term contracts who use fiber optic internet and paperless billing could receive targeted offers or incentives, making retention efforts more efficient and effective.\n",
         "\n",
-        "### 7.3 Model Recommendations\n",
+        "### 7.4 Model Recommendations\n",
         "To improve machine learning models for churn prediction, the company can consider the following strategies:\n",
         "\n",
         "- Balance Precision and Recall:\n",
