--- a/notebooks/1.0-hdr-init-nb.ipynb
+++ b/notebooks/1.0-hdr-init-nb.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Telecom Customer Churn Prediction\n",
+        "# Predicting Customer Churn in Telecom: A Machine Learning Approach\n",
         "By Hans Darmawan - JCDS2602\n",
         "\n",
         "---\n",
