--- a/notebooks/1.0-hdr-init-nb.ipynb
+++ b/notebooks/1.0-hdr-init-nb.ipynb
@@ -4106,7 +4106,7 @@
         "- InternetService_Fiber optic and PaperlessBilling also positively contribute to churn risk.\n",
         "- Tenure has a negative contribution — shorter tenure customers are more likely to churn.\n",
         "- Some service protections like DeviceProtection and OnlineSecurity have minor negative contributions, suggesting their absence may slightly increase churn risk.\n",
-        "- The machine learning model predicted a churn rate of 26.67% on the test set, which means almost the same like before of 26.69%, revealing a 0.02% gap between predicted and true churn rates.\n",
+        "- The machine learning model predicted a churn rate of 26.67% on the test set, which means almost the same like before of 26.69%. It reveals a reliable model whichs gaps 0.02% of predicted and true churn rates.\n",
         "\n",
         "### 7.3 Business Recommendations\n",
         "To reduce the churn, the company can consider the following business strategies:\n",
@@ -4129,9 +4129,7 @@
         "- Balance Precision and Recall:\n",
         "    + Instead of focusing solely on maximizing recall, the company can tune the model to achieve a better balance between precision and recall. This can be done by adjusting the classification threshold or using evaluation metrics like the F1-score that consider both precision and recall.\n",
         "- Regular Model Retraining:\n",
-        "    + Customer behavior and market conditions change over time. Regularly retraining the model with new data ensures that it adapts to recent trends and maintains accuracy.\n",
-        "- Calibration of Predicted Probabilities:\n",
-        "    + Apply probability calibration techniques (e.g., Platt scaling, isotonic regression) to ensure that predicted probabilities reflect true likelihoods, reducing overestimation of churn rates."
+        "    + Customer behavior and market conditions change over time. Regularly retraining the model with new data ensures that it adapts to recent trends and maintains accuracy."
       ]
     },
     {
