Update churn rate into CAC and CRC.

--- a/notebooks/1.2-hdr-init-nb.ipynb
+++ b/notebooks/1.2-hdr-init-nb.ipynb
@@ -38,10 +38,10 @@
         "\n",
         "### 1.6 Metric Evaluation\n",
         "- Business Metric 1: Customer Acquistion Rate (CAC)\n",
-        "    + Customer Acquisition Cost (CAC) is a crucial business metric that measures the total cost of acquiring a new customer, including sales and marketing expenses. It helps businesses evaluate efficiency and profitability, identify cost-effective channels, and make strategic decisions to improve marketing return on investment and customer retention (Corporate Finance Institute [CFI], n.d.). Yoga (2024) assumes that the CAC can be $200 per customers.\n",
+        "    + Customer Acquisition Cost (CAC) is a crucial business metric that measures the total cost of acquiring a new customer, including sales and marketing expenses. It helps businesses evaluate efficiency and profitability, identify cost-effective channels, and make strategic decisions to improve marketing return on investment and customer retention (Corporate Finance Institute [CFI], n.d.). Yoga (2024) assumes that the CAC can be $200 per customer.\n",
         "\n",
         "- Business Metric 2: Customer Retention Rate (CRC)\n",
-        "    + Customer Retention Cost (CRC) is the cost a company incurs to retain and retain customers, including service salaries, loyalty programs, training, and account management (Singerland,2023). Yoga (2024) assumes that the CRC can be $50 per customers.\n",
+        "    + Customer Retention Cost (CRC) is the cost a company incurs to retain and retain customers, including service salaries, loyalty programs, training, and account management (Singerland,2023). Yoga (2024) assumes that the CRC can be $50 per customer.\n",
         "\n",
         "- Machine Learning Evaluation Metric: Recall\n",
         "    + Recall is a vital metric in telecom churn prediction because it directly reflects the model’s effectiveness in capturing the customers most at risk of leaving, enabling targeted retention efforts that protect revenue and support business growth.\n",
