--- a/notebooks/1.2-hdr-init-nb.ipynb
+++ b/notebooks/1.2-hdr-init-nb.ipynb
@@ -4331,7 +4331,7 @@
       "id": "ff0c2bce",
       "metadata": {},
       "source": [
-        "..."
+        "The Machine Learning Scenario significantly reduces both the loss from False Negatives and the cost from False Positives compared to the Rule-Based Scenario. This leads to a substantial decrease in total monthly and annual losses. Implementing the Machine Learning approach can therefore be seen as a more cost-effective strategy, saving nearly $80,000 annually or about a quarter of the total losses experienced under the Rule-Based system. "
       ]
     },
     {
@@ -4420,7 +4420,7 @@
         "- InternetService_Fiber optic and PaperlessBilling also positively contribute to churn risk.\n",
         "- Tenure has a negative contribution — shorter tenure customers are more likely to churn.\n",
         "- Some service protections like DeviceProtection and OnlineSecurity have minor negative contributions, suggesting their absence may slightly increase churn risk.\n",
-        "- The machine learning model predicted a churn rate of 26.67% on the test set, which means almost the same like before of 26.69%. It reveals a reliable model whichs gaps 0.02% of predicted and true churn rates.\n",
+        "- The Machine Learning Scenario significantly reduces False Negatives and False Positives losses, saving nearly $80,000 annually, a quarter of the total losses under the Rule-Based system.\n",
         "\n",
         "### 7.3 Business Recommendations\n",
         "To reduce the churn, the company can consider the following business strategies:\n",
