--- a/notebooks/1.3-hdr-init-nb.ipynb
+++ b/notebooks/1.3-hdr-init-nb.ipynb
@@ -4150,9 +4150,9 @@
       "source": [
         "LIME (Local Interpretable Model-agnostic Explanations) is described as a technique that is used to explain the predictions of any supervised machine learning model by treating it as a black box. It is designed to provide explanations that are locally faithful to the model’s behavior around a specific instance, making the decision-making process more interpretable. Samples are generated around the instance of interest, and a simple, interpretable surrogate model is fitted on these samples to approximate the original model’s predictions. The importance of features contributing to the prediction is then identified, allowing users to understand the reasoning behind complex model outputs in a clear and accessible manner (GeeksforGeeks, 2023).\n",
         "\n",
-        "The feature importance for the selected test instance was examined using LIME. The model’s preprocessor and classifier were extracted from the pipeline, and the training data was transformed accordingly. Feature names were aligned with the transformed data to ensure accurate interpretation. A prediction function was defined to work with the preprocessed data, allowing LIME to generate explanations correctly. The test instance was also transformed before the explanation was produced.\n",
+        "Among the features, the \"Contract\" type has the most significant positive contribution, suggesting that it plays a crucial role in favorably influencing the prediction. Similarly, the \"InternetService_Fiber optic\" feature also contributes positively, indicating that this type of internet service is associated with a higher likelihood of the predicted outcome. In contrast, the \"Tenure\" feature, specifically within the range of 0.00 to 0.55, has a negative contribution, which implies that a tenure in this range reduces the likelihood of the predicted outcome.\n",
         "\n",
-        "The results showed the top ten features that influenced the model’s prediction. Positive contributions, shown in green, increased the likelihood of the predicted outcome. The “Contract” feature had the strongest positive impact, indicating it played a key role in the prediction. Other features like “InternetService_Fiber optic” and “PaperlessBilling” also supported the prediction but to a lesser degree. Negative contributions, shown in red, reduced the predicted probability. For example, “tenure” had a negative effect, suggesting that shorter tenure lowered the chance of the predicted outcome. Minor negative impacts were seen from features like “DeviceProtectionYes” and “OnlineSecurityYes.”"
+        "Other features, such as \"OnlineBackup_No internet service\" and \"DeviceProtection_Yes,\" show minimal to no impact on the prediction. Features like \"TechSupport_Yes\" and \"InternetService_No\" also contribute very little, indicating that they do not significantly sway the model's decision for this instance. Overall, the plot highlights that the model's prediction is heavily influenced by the contract type and internet service, while the tenure within a specific range has a detrimental effect. This interpretation aids in understanding the model's behavior and the importance of each feature in making predictions."
       ]
     },
     {
@@ -4439,25 +4439,26 @@
         "\n",
         "### 7.2 Conclusion\n",
         "- Contract has the strongest positive contribution to churn prediction — customers with certain contract types are more likely to churn.\n",
-        "- InternetService_Fiber optic and PaperlessBilling also positively contribute to churn risk.\n",
+        "- InternetService_Fiber optic also positively contribute to churn risk.\n",
         "- Tenure has a negative contribution — shorter tenure customers are more likely to churn.\n",
-        "- Some service protections like DeviceProtection and OnlineSecurity have minor negative contributions, suggesting their absence may slightly increase churn risk.\n",
         "- The Machine Learning Scenario significantly increases recall score around 9% and reduces False Negatives and False Positives losses, saving nearly $80,000 annually, a quarter of the total losses under the Rule-Based system.\n",
         "\n",
         "### 7.3 Business Recommendations\n",
         "To reduce the churn, the company can consider the following business strategies:\n",
-        "- Promote Longer-Term Contracts  \n",
-        "    + The “Contract” feature has the strongest positive impact on churn, indicating that customers with shorter or month-to-month contracts are more likely to leave. Encouraging customers to sign longer-term contracts, such as annual or multi-year agreements, through incentives like discounts or bundled services can improve retention. Educating customers on the benefits of longer contracts, including stability and cost savings, may also increase their commitment.\n",
-        "- Improve Fiber Optic Internet Service Experience  \n",
-        "    + Customers using fiber optic internet service show a higher likelihood of churn. This suggests potential issues such as service reliability, pricing, or customer support. The company should investigate these areas and consider enhancing the quality of fiber optic service, providing better technical support, or offering more competitive pricing and promotions tailored to these customers to reduce dissatisfaction.\n",
-        "- Evaluate and Enhance Paperless Billing  \n",
-        "    + Paperless billing is associated with increased churn risk in this analysis. The company should assess whether the digital billing process is clear, user-friendly, and trustworthy. Offering multiple billing options and improving communication around billing can help customers feel more confident managing their accounts, thereby reducing churn.\n",
-        "- Focus on Engaging Newer Customers  \n",
-        "    + Shorter tenure is linked to higher churn risk, so the company should prioritize engagement with new customers. Implementing onboarding programs, regular check-ins, and proactive support during the early months can build loyalty. Early identification of dissatisfaction and timely intervention will help retain customers during this vulnerable period.\n",
-        "- Promote Device Protection and Online Security Services  \n",
-        "    + Although their impact is smaller, the absence of device protection and online security services slightly increases churn risk. The company should promote these add-on services more effectively by highlighting their value in protecting customer devices and data. Bundling these services with popular plans may increase adoption and improve retention.\n",
-        "- Develop Personalized Retention Strategies  \n",
-        "    + Using the insights from feature importance, the company can tailor retention efforts based on individual customer profiles. For example, customers with short-term contracts who use fiber optic internet and paperless billing could receive targeted offers or incentives, making retention efforts more efficient and effective.\n",
+        "- Contract Optimization:\n",
+        "    + Promote Favorable Contracts: Focus marketing efforts on promoting contract types that positively influence customer retention and satisfaction. Consider offering incentives for customers to choose these contracts.\n",
+        "- Internet Service Offerings:\n",
+        "    + Enhance Fiber Optic Services: Since the \"InternetService_Fiber optic\" feature positively impacts predictions, invest in expanding fiber optic infrastructure and promoting its benefits to attract more customers.\n",
+        "- Customer Retention Strategies:\n",
+        "    + Address Tenure Concerns: Develop targeted retention strategies for customers with tenures in the 0.00 to 0.55 range. This could include personalized outreach, loyalty programs, or special offers to encourage them to stay.\n",
+        "- Feature Awareness Campaigns:\n",
+        "    + Educate Customers: Create campaigns to inform customers about the benefits of additional features, such as online backups and device protection, which may not currently be perceived as valuable.\n",
+        "- Customer Feedback Loop:\n",
+        "    + Gather Feedback: Implement mechanisms to gather customer feedback on service features and contracts. Use this data to refine offerings and address any pain points that may lead to churn.\n",
+        "- Analyze Customer Segments:\n",
+        "    + Segment Analysis: Conduct further analysis on customer segments to understand the specific needs and behaviors of different groups, allowing for more tailored marketing and service offerings.\n",
+        "- Retention Metrics Monitoring:\n",
+        "    + Track Key Metrics: Regularly monitor key metrics related to contract types, internet service usage, and customer tenure to identify trends and adjust strategies accordingly.\n",
         "\n",
         "### 7.4 Model Recommendations\n",
         "To improve machine learning models for churn prediction, the company can consider the following strategies:\n",
